--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="user">
-                <div class="user-card">
-                    <div class="user-card__container">
-                        <h3>User's Name</h3>
-                        <p><b>Email:</b> email@email.com</p>
-                        <p><b>Phone:</b> 0000000000</p>
-                        <p><b>Website:</b><a href="https://website.website" target="_blank">website.website</a></p>
+            <div class="user-list">
+                <div class="user">
+                    <div class="user-card">
+                        <div class="user-card__container">
+                            <h3>User's Name</h3>
+                            <p><b>Email:</b> email@email.com</p>
+                            <p><b>Phone:</b> 0000000000</p>
+                            <p><b>Website:</b><a href="https://website.website" target="_blank">website.website</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 </body>
+<script src="index.js"></script>
 
 </html>
